# src/v1/routes/index.js
@@ -2,7 +2,7 @@ const { Router } = require('express')
 const router = Router()
 
 router.use('/organizations', require('./organizations'))
-//router.use('/hunters', require('./hunters'))
+router.use('/hunters', require('./hunters'))
 router.use('/failures', require('./failures'))
 router.use('/admins', require('./admins'))
 
